Update test configuration