@@ -320,7 +320,11 @@ task functionalJavaSmokeTest(type: Test) {
 task functionalJavaHelloTest(type: Test) {
     useJUnitPlatform()
 
-    timeout = Duration.ofMinutes(25)
+    maxParallelForks = 1
+    timeout = Duration.ofMinutes(60)
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
 
     filter {
         includeTestsMatching('cloud.filibuster.functional.java.hello.*')
